@@ -221,15 +221,15 @@ void BaseGui::initializeGui() {
 void BaseGui::initializeProxy() {
 	QNetworkProxy proxy;
 	if ( (pref->use_proxy) && (!pref->proxy_host.isEmpty()) ) {
-		//proxy.setType(QNetworkProxy::HttpProxy);
-		proxy.setType(QNetworkProxy::Socks5Proxy);
+		proxy.setType((QNetworkProxy::ProxyType) pref->proxy_type);
 		proxy.setHostName(pref->proxy_host);
 		proxy.setPort(pref->proxy_port);
 		if ( (!pref->proxy_username.isEmpty()) && (!pref->proxy_password.isEmpty()) ) {
 			proxy.setUser(pref->proxy_username);
 			proxy.setPassword(pref->proxy_password);
 		}
-		qDebug("BaseGui::initializeProxy: using proxy: host: %s, port: %d", pref->proxy_host.toUtf8().constData(), pref->proxy_port);
+		qDebug("BaseGui::initializeProxy: using proxy: host: %s, port: %d, type: %d", 
+               pref->proxy_host.toUtf8().constData(), pref->proxy_port, pref->proxy_type);
 	} else {
 		// No proxy
 		proxy.setType(QNetworkProxy::NoProxy);
